--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -34,6 +34,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/messageItem_textview_readCounter_left"
+                android:text="1"
+                android:textColor="@android:color/holo_orange_light"
+                android:textSize="9dp"
+                android:layout_margin="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"/>
+
         <TextView
             android:id="@+id/messageItem_tv_timestamp"
             android:textSize="9dp"
@@ -42,6 +56,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+            <TextView
+                android:id="@+id/messageItem_textview_readCounter_right"
+                android:text="1"
+                android:textColor="@android:color/holo_orange_light"
+                android:textSize="9dp"
+                android:layout_margin="2dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                />
+
+    </LinearLayout>
     </LinearLayout>
 
 
